# kaldi-native-fbank

./: .gitignore  CMakeLists.txt  README.md  build-arm-linux-gnueabihf.sh  setup.py
.github/scripts/: filter.py  filter.yaml
.github/workflows/: build-wheels-aarch64.yaml  build-wheels-arm.yaml  build-wheels-macos-arm64.yaml  build-wheels-macos-x64.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  build-wheels.yaml  iwyu.yaml  linux-macos-windows.yaml  linux-macos.yaml  publish-to-pypi.yaml  test-wheel.yaml  windows-x64.yaml  windows-x86.yaml  windows.yaml
cmake/: cmake_extension.py  googletest.cmake  kissfft.cmake  pybind11.cmake
kaldi-native-fbank/: CMakeLists.txt
kaldi-native-fbank/csrc/: CMakeLists.txt  feature-fbank.cc  feature-mfcc.cc  feature-window.cc  feature-window.h  fftsg.cc  generate-whisper-melbank.py  istft.cc  istft.h  kaldi-math.cc  kaldi-math.h  log.h  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  rfft.cc  rfft.h  stft.cc  stft.h  test-log.cc  test-rfft.cc  whisper-feature.cc  whisper-feature.h  whisper-mel-bank.h
kaldi-native-fbank/python/csrc/: CMakeLists.txt  feature-fbank.cc  feature-fbank.h  feature-window.cc  feature-window.h  istft.cc  istft.h  kaldi-native-fbank.cc  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  rfft.cc  stft.cc  stft.h  utils.cc  utils.h
kaldi-native-fbank/python/kaldi_native_fbank/: __init__.py  __init__.pyi
kaldi-native-fbank/python/tests/: CMakeLists.txt  test_istft.py  test_online_whisper_fbank.py  test_rfft.py  test_stft.py  test_vocos_istft.py
scripts/: check_style_cpplint.sh
toolchains/: README.md
